<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_moto">

    <fragment
        android:id="@+id/nav_moto"
        android:name="com.example.locadoraempinamoto.ui.moto.MotoFragment"
        android:label="@string/menu_moto"
        tools:layout="@layout/fragment_moto" >
        <action
            android:id="@+id/action_nav_moto_to_nav_moto_item"
            app:destination="@id/nav_moto_item" />
    </fragment>
    <fragment
        android:id="@+id/nav_moto_item"
        android:name="com.example.locadoraempinamoto.ui.moto.MotoItemFragment"
        android:label="@string/menu_moto_item"
        tools:layout="@layout/fragment_moto_item" />

    <fragment
        android:id="@+id/nav_client"
        android:name="com.example.locadoraempinamoto.ui.cliente.ClienteFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_rent"
        android:name="com.example.locadoraempinamoto.ui.locacao.LocacaoFragment"
        android:label="@string/menu_rent"
        tools:layout="@layout/fragment_locacao" />

    <fragment
        android:id="@+id/nav_item"
        android:name="com.example.locadoraempinamoto.ui.locacao.LocacaoFragment"
        android:label="@string/menu_rent"
        tools:layout="@layout/fragment_locacao" />

</navigation>