<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.moto.MotoItemFragment">

        <Spinner
            android:id="@+id/clienteNomeField"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/clienteNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoCategoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clienteNomeField" />

        <EditText
            android:id="@+id/clienteNascimentoField"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clienteNomeField" />

        <TextView
            android:id="@+id/clienteNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoMarca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clienteNascimentoField" />

        <EditText
            android:id="@+id/clienteCNHField"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clienteNascimentoField" />

        <TextView
            android:id="@+id/clienteCNH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoModelo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clienteCNHField" />

        <EditText
            android:id="@+id/motoAnoField"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clienteCNHField" />

        <TextView
            android:id="@+id/motoAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoAno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/motoAnoField" />

        <Spinner
            android:id="@+id/motoTipoMotorField"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoAnoField" />

        <TextView
            android:id="@+id/motoTipoMotor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoTipoMotor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/motoTipoMotorField" />

        <EditText
            android:id="@+id/motoCapTanqueField"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoTipoMotorField" />

        <TextView
            android:id="@+id/motoCapTanque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoCapTanque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/motoCapTanqueField" />

        <EditText
            android:id="@+id/motoMediaConsumoField"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoCapTanqueField" />

        <TextView
            android:id="@+id/motoMediaConsumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoMediaConsumo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/motoMediaConsumoField" />

        <EditText
            android:id="@+id/motoValorCustoField"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/fieldLeft"
            android:layout_marginTop="@dimen/fieldTop"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoMediaConsumoField" />

        <TextView
            android:id="@+id/motoValorCusto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/motoValorCusto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/motoValorCustoField" />

        <TextView
            android:id="@+id/motoAcessorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/motoAcessorio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoValorCustoField" />

        <Button
            android:id="@+id/locacaoSave"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:text="@string/buttonSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoAcessorio03" />

        <Button
            android:id="@+id/locacaoCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locacaoSave" />

        <CheckBox
            android:id="@+id/motoAcessorio01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/motoAcessorio01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motoAcessorio" />

        <CheckBox
            android:id="@+id/motoAcessorio02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/motoAcessorio02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/motoAcessorio01" />

        <CheckBox
            android:id="@+id/motoAcessorio03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motoAcessorio03"
            app:layout_constraintStart_toStartOf="@+id/motoAcessorio01"
            app:layout_constraintTop_toBottomOf="@+id/motoAcessorio01" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

